feat: add get timeline by user id
