# pkg/server/internal/wire.go
@@ -4,10 +4,11 @@ import (
 	"github.com/google/wire"
 	"github.com/jackc/pgx/v5/pgxpool"
 	"github.com/sonnnnnnp/sns-app/internal/adapter/controller"
-	authorize_usecase "github.com/sonnnnnnp/sns-app/internal/usecase/authorize"
-	post_usecase "github.com/sonnnnnnp/sns-app/internal/usecase/post"
-	stream_usecase "github.com/sonnnnnnp/sns-app/internal/usecase/stream"
-	user_usecase "github.com/sonnnnnnp/sns-app/internal/usecase/user"
+	"github.com/sonnnnnnp/sns-app/internal/usecase/authorize"
+	"github.com/sonnnnnnp/sns-app/internal/usecase/post"
+	"github.com/sonnnnnnp/sns-app/internal/usecase/stream"
+	"github.com/sonnnnnnp/sns-app/internal/usecase/timeline"
+	"github.com/sonnnnnnp/sns-app/internal/usecase/user"
 	"github.com/sonnnnnnp/sns-app/pkg/line"
 )
 
@@ -15,10 +16,11 @@ func Wire(pool *pgxpool.Pool) *controller.Controller {
 	wire.Build(
 		line.New,
 
-		authorize_usecase.New,
-		post_usecase.New,
-		stream_usecase.New,
-		user_usecase.New,
+		authorize.New,
+		post.New,
+		stream.New,
+		timeline.New,
+		user.New,
 
 		controller.New,
 	)
